--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express": "^4.18.2",
     "@line/bot-sdk": "^7.5.2",
     "googleapis": "^129.0.0",
-    "@google-cloud/speech": "^6.0.0"
+    "@google-cloud/speech": "^6.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "ffmpeg-static": "^5.2.0"
   },
@@ -17,4 +17,5 @@
     "node": "18.x"
   }
 }
+
 
